[package]
name = "termcrypt"
version = "0.1.1"
authors = ["peepopoggers <72892531+peepopoggers@users.noreply.github.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Interface for the decentralized paradigm"
readme = "README.md"
repository = "https://github.com/termcrypt/termcrypt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
scanln = "0.1.1"
chrono = "0.4"
ansi_term = "0.12.1"
dotenv = "0.14.1"
anyhow = "1.0.44"
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
rustyline = "9.0.0"
terminal_size = "0.1.17"
sled = "0.34"
dirs = "4.0"
#spinners = "2.0.0"

#Exchanges

#ftx = { git="https://github.com/fabianboesiger/ftx", branch = "main" }
#ftx = { git="https://github.com/dovahcrow/ftx", branch = "fix/OrderType"}
ftx = { path = "./src/ftxtest" }